--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="page">
                     <img id="blogger-photos" src="manav.jpg" alt="Blogger at a coffee shop">    
-                    <p style="text-align: center;font-size: 30px;font-family:Georgia, 'Times New Roman', Times, serif ;"   >Pratik Rakhecha</p>
+                    <p style="text-align: center;font-size: 30px;font-family:Georgia, 'Times New Roman', Times, serif ;"   >Manav Garg</p>
             <p style="text-align: center;font-size: 15px;font-family:Georgia, 'Times New Roman', Times, serif ;text-decoration: overline;">
                 Blogger<br> Trailbound Adventures
             </p>              
